--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   solid_bottom_sheet: ^0.1.10
+  dotted_line: ^3.1.0
 #  bottom_sheet: ^3.1.2
 
 dev_dependencies:
