--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   solid_bottom_sheet: ^0.1.10
   dotted_line: ^3.1.0
+  http: ^0.13.5
 #  bottom_sheet: ^3.1.2
 
 dev_dependencies:
